--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -34,6 +34,20 @@ body {
   p {
     @apply text-p;
   }
+
+  .liner-gradient {
+    background: radial-gradient(circle at 100% 100%, #ffffff 0, #ffffff 9px, transparent 9px) 0% 0%/10px
+        10px no-repeat,
+      radial-gradient(circle at 0 100%, #ffffff 0, #ffffff 9px, transparent 9px) 100% 0%/10px 10px
+        no-repeat,
+      radial-gradient(circle at 100% 0, #ffffff 0, #ffffff 9px, transparent 9px) 0% 100%/10px 10px
+        no-repeat,
+      radial-gradient(circle at 0 0, #ffffff 0, #ffffff 9px, transparent 9px) 100% 100%/10px 10px
+        no-repeat,
+      linear-gradient(#ffffff, #ffffff) 50% 50% / calc(100% - 2px) calc(100% - 20px) no-repeat,
+      linear-gradient(#ffffff, #ffffff) 50% 50% / calc(100% - 20px) calc(100% - 2px) no-repeat,
+      linear-gradient(#248888 0%, #ff9506 100%) 0 100%/50% 100%;
+  }
 }
 
 @media (min-width: 376px) {
