--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -95,6 +95,8 @@
   }
 }
 
+/* Footer */
+
 .footerList {
   @apply mb-4;
 }
@@ -103,6 +105,6 @@
   @apply mb-3 font-bold;
 }
 
-.footerSubList {
+.footerList > ul {
   @apply flex flex-col gap-2 text-sm;
 }
