add heart-fill icon, change styles button, input, heart-icon

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -46,23 +46,16 @@
   }
 
   .liner-gradient {
-    background: radial-gradient(
-          circle at 100% 100%,
-          #ffffff 0,
-          #ffffff 9px,
-          transparent 9px
-        )
-        0% 0%/10px 10px no-repeat,
-      radial-gradient(circle at 0 100%, #ffffff 0, #ffffff 9px, transparent 9px)
-        100% 0%/10px 10px no-repeat,
-      radial-gradient(circle at 100% 0, #ffffff 0, #ffffff 9px, transparent 9px)
-        0% 100%/10px 10px no-repeat,
-      radial-gradient(circle at 0 0, #ffffff 0, #ffffff 9px, transparent 9px)
-        100% 100%/10px 10px no-repeat,
-      linear-gradient(#ffffff, #ffffff) 50% 50% / calc(100% - 2px)
-        calc(100% - 20px) no-repeat,
-      linear-gradient(#ffffff, #ffffff) 50% 50% / calc(100% - 20px)
-        calc(100% - 2px) no-repeat,
+    background: radial-gradient(circle at 100% 100%, #ffffff 0, #ffffff 9px, transparent 9px) 0% 0%/10px
+        10px no-repeat,
+      radial-gradient(circle at 0 100%, #ffffff 0, #ffffff 9px, transparent 9px) 100% 0%/10px 10px
+        no-repeat,
+      radial-gradient(circle at 100% 0, #ffffff 0, #ffffff 9px, transparent 9px) 0% 100%/10px 10px
+        no-repeat,
+      radial-gradient(circle at 0 0, #ffffff 0, #ffffff 9px, transparent 9px) 100% 100%/10px 10px
+        no-repeat,
+      linear-gradient(#ffffff, #ffffff) 50% 50% / calc(100% - 2px) calc(100% - 20px) no-repeat,
+      linear-gradient(#ffffff, #ffffff) 50% 50% / calc(100% - 20px) calc(100% - 2px) no-repeat,
       linear-gradient(#248888 0%, #ff9506 100%) 0 100%/50% 100%;
   }
 
@@ -76,13 +69,16 @@
   }
 
   .carousel-arrow.carousel-arrow-prev {
-    background: url("../../public/icons/prev.svg") 0 / 100% no-repeat;
+    background: url('../../public/icons/prev.svg') 0 / 100% no-repeat;
   }
   .carousel-arrow.carousel-arrow-next {
-    background: url("../../public/icons/next.svg") 0 / 100% no-repeat;
+    background: url('../../public/icons/next.svg') 0 / 100% no-repeat;
   }
   .search-input-hero::placeholder {
-    background: url("../../public/icons/search.svg") 10px / 16px no-repeat;
+    background: url('../../public/icons/search.svg') 10px / 16px no-repeat;
+  }
+  .search-input-hero:focus {
+    border-color: #ffcb21;
   }
   .search-input-hero:focus::placeholder {
     background-image: none;
@@ -93,6 +89,23 @@
     font-size: 32px;
     line-height: 48px;
   }
+}
+
+/*Favorite*/
+.product-card .heart-img:hover {
+  filter: brightness(0) saturate(100%) invert(44%) sepia(46%) saturate(690%) hue-rotate(131deg)
+    brightness(91%) contrast(82%);
+  cursor: pointer;
+}
+.product-card .heart-img:active {
+  background: url('/icons/heart-fill.svg');
+}
+
+.favorite-section .product-card .heart-img {
+  filter: brightness(0) saturate(100%) invert(44%) sepia(46%) saturate(690%) hue-rotate(131deg)
+    brightness(91%) contrast(82%);
+  cursor: pointer;
+  background: url('/icons/heart-fill.svg');
 }
 
 /* Footer */
